Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -69,7 +69,7 @@
       </mat-form-field>
       <!-- project area -->
       <mat-form-field class="border-input">
-        <input matInput type="text" placeholder="Project Area" formControlName="area">
+        <input matInput type="number" placeholder="Project Area" formControlName="area">
         <mat-error>ProjectArea is Required</mat-error>
       </mat-form-field>
       <!-- project unit -->
