--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -1,1 +1,140 @@
-<p>indent-detail works!</p>
+<div class="page-start-point">
+  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="row">
+      <div class="col-sm-12">
+        <card-layout
+          (onEdit)="editProject($event)"
+          (onDelete)="deleteProject($event)"
+          [projectDetails]="product"
+        ></card-layout>
+      </div>
+    </div>
+    <div class="row p-t-10 p-b-10">
+      <div class="col-sm-12">
+        <mat-toolbar>
+          <span>Ongoing Indent</span>
+        </mat-toolbar>
+      </div>
+    </div>
+    <!-- first table structure -->
+    <div class="row">
+      <!-- <div class="col-sm-12"> -->
+      <!-- table structure -->
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8 col-sm-12"
+      >
+        <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="Indent Name">
+          <th mat-header-cell *matHeaderCellDef>Indent Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.indentName }}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="Requested Date">
+          <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.requestedDate }}
+          </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="Total No Of Material">
+          <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.totalNoOfMaterial }}
+          </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="Created By">
+          <th mat-header-cell *matHeaderCellDef>Created By</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdBy }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Date">
+          <th mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.date }}
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <!-- end structure -->
+      <!-- </div> -->
+    </div>
+    <div class="row p-t-10 p-b-10">
+      <div class="col-sm-12">
+        <mat-toolbar>
+          <span>Completed Indent</span>
+        </mat-toolbar>
+      </div>
+    </div>
+    <!-- first table structure -->
+    <div class="row">
+      <!-- <div class="col-sm-12"> -->
+      <!-- table structure -->
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8 col-sm-12"
+      >
+        <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="Indent Name">
+          <th mat-header-cell *matHeaderCellDef>Indent Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.indentName }}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="Requested Date">
+          <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.requestedDate }}
+          </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="Total No Of Material">
+          <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.totalNoOfMaterial }}
+          </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="Created By">
+          <th mat-header-cell *matHeaderCellDef>Created By</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdBy }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Date">
+          <th mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.date }}
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <!-- end structure -->
+      <!-- </div> -->
+    </div>
+    <!-- end of first structure -->
+  </div>
+</div>
