--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -86,7 +86,7 @@
                   class="col-sm-3 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
                 >
                   <div class="font-size20 text-bold">
-                    {{ projectDetails.materialCount }}
+                    {{ projectDetails.matCount }}
                   </div>
                   <div class="font-size10 p-l-15">
                     All<br />
