--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -3,7 +3,7 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12">
-        <card-layout
+        <card-layout *ngIf="product"
           (onEdit)="editProject($event)"
           (onDelete)="deleteProject($event)"
           [projectDetails]="product"
