--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -22,7 +22,16 @@
         mat-table
         [dataSource]="dataSource"
         multiTemplateDataRows
-        class="mat-elevation-z8 col-sm-12"
+        class="mat-eHigh performance, minimalist Go web framework
+        https://echo.labstack.com
+        ____________________________________O/_______
+                                            O\
+        ⇨ http server started on [::]:1323
+        ^Csignal: interrupt
+        apaar@mystic:~/Desktop/angular/erpMaterial/material-master$ git pull upstream master
+        fatal: 'upstream' does not appear to be a git repository
+        fatal: Could not read from remote repository.
+        q ulevation-z8 col-sm-12"
         matSort
       >
         <ng-container
@@ -71,6 +80,7 @@
                     </td>
                   </ng-container>
                   <tr
+                    style="display: none;"
                     mat-header-row
                     *matHeaderRowDef="innerDisplayedColumns"
                   ></tr>
