--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -1,10 +1,10 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <card-layout
-        (onEdit)="editProject($event)"
-        (onDelete)="deleteProject($event)"
-        [projectDetails]="product"
-      ></card-layout>
+      (onEdit)="editProject($event)"
+      (onDelete)="deleteProject($event)"
+      [projectDetails]="product"
+    ></card-layout>
     <div class="p-t-10" *ngIf="!showTable">
       <div class="row display-flex">
         <div class="m-b-10 m-r-10" *ngFor="let category of selectedCategory">
@@ -24,14 +24,15 @@
                 class="p-l-10 p-b-5"
                 matInput
                 type="search"
-                placeholder="Search Category Name" [(ngModel)]="searchText"
+                placeholder="Search Category Name"
+                [(ngModel)]="searchText"
               />
               <button mat-button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
               </button>
             </div>
             <mat-option
-              *ngFor="let category of fullCategoryList | SearchPipe:searchText"
+              *ngFor="let category of fullCategoryList | SearchPipe: searchText"
               [value]="category"
               (click)="demo()"
               >{{ category.materialGroup }}
@@ -52,7 +53,7 @@
     </div>
     <app-bom-preview
       *ngIf="showTable"
-      [selectedCategory]="selectedCategory"
+      [selectedCategory]="catergoryData"
     ></app-bom-preview>
   </div>
 </div>
