--- a/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
+++ b/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
@@ -13,7 +13,7 @@
   <div class="col-sm-6">
     <button
       mat-raised-button
-      class="main-background-color main-button color-white pull-right">
+      class="main-background-color main-button color-white pull-right" (click)="delete()">
       Delete
     </button>
   </div>
