--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -22,7 +22,7 @@
       <!-- table structure -->
       <table
         mat-table
-        [dataSource]="dataSource"
+        [dataSource]="dataSource1"
         class="mat-elevation-z8 col-sm-12"
       >
         <!--- Note that these columns can be defined in any order.
@@ -31,14 +31,14 @@
         <!-- Position Column -->
         <ng-container matColumnDef="Indent Name">
           <th mat-header-cell *matHeaderCellDef>Indent Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.indentName }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="Requested Date">
           <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.requestedDate }}
+            {{ element.createdAt | date }}
           </td>
         </ng-container>
 
@@ -46,7 +46,7 @@
         <ng-container matColumnDef="Total No Of Material">
           <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.totalNoOfMaterial }}
+            {{ element.materialCount }}
           </td>
         </ng-container>
 
@@ -61,7 +61,7 @@
         <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.date }}
+            {{ element.createdAt | date }}
           </td>
         </ng-container>
 
@@ -85,7 +85,7 @@
       <!-- table structure -->
       <table
         mat-table
-        [dataSource]="dataSource"
+        [dataSource]="dataSource2"
         class="mat-elevation-z8 col-sm-12"
       >
         <!--- Note that these columns can be defined in any order.
@@ -94,14 +94,14 @@
         <!-- Position Column -->
         <ng-container matColumnDef="Indent Name">
           <th mat-header-cell *matHeaderCellDef>Indent Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.indentName }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="Requested Date">
           <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.requestedDate }}
+            {{ element.createdAt | date }}
           </td>
         </ng-container>
 
@@ -109,7 +109,7 @@
         <ng-container matColumnDef="Total No Of Material">
           <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.totalNoOfMaterial }}
+            {{ element.materialCount }}
           </td>
         </ng-container>
 
@@ -124,7 +124,7 @@
         <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.date }}
+            {{ element.createdAt | date }}
           </td>
         </ng-container>
 
