--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -35,28 +35,56 @@
         q ulevation-z8 col-sm-12"
         matSort
       >
-        <ng-container
-          matColumnDef="{{ column }}"
-          *ngFor="let column of columnsToDisplay"
-        >
+        <ng-container matColumnDef="materialName">
           <th *matHeaderCellDef mat-sort-header>
-            {{ column }}
+            Name
           </th>
           <td class="text-left" mat-cell *matCellDef="let element">
-            {{ element[column] }}
+            {{ element.materialName }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="estimatedQty">
+          <th *matHeaderCellDef mat-sort-header>
+            Estimated Quantity
+          </th>
+          <td class="text-left" mat-cell *matCellDef="let element">
+            {{ element.estimatedQty }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="requestedQuantity">
+          <th *matHeaderCellDef mat-sort-header>
+            Requested Quantity
+          </th>
+          <td class="text-left" mat-cell *matCellDef="let element">
+            {{ element.requestedQuantity }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="issueToProject">
+          <th *matHeaderCellDef mat-sort-header>
+            Issued To Project
+          </th>
+          <td class="text-left" mat-cell *matCellDef="let element">
+            {{ element.issueToProject }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="availableStock">
+          <th *matHeaderCellDef mat-sort-header>
+            Available In Stock
+          </th>
+          <td class="text-left" mat-cell *matCellDef="let element">
+            {{ element.availableStock }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="expandedDetail">
           <td
-            class="p-l-10 p-r-10"
             mat-cell
             *matCellDef="let element"
             [attr.colspan]="columnsToDisplay.length"
           >
             <div
               class="example-element-detail"
-              *ngIf="element.materials.data.length"
+              *ngIf="element.materialSpecs"
               [@detailExpand]="
                 element == expandedElement ? 'expanded' : 'collapsed'
               "
@@ -68,18 +96,47 @@
                 <table
                   class="col-sm-12"
                   mat-table
-                  [dataSource]="element.materials"
+                  [dataSource]="element.materialSpecs"
                   matSort
                 >
-                  <ng-container
-                    matColumnDef="{{ innerColumn }}"
-                    *ngFor="let innerColumn of innerDisplayedColumns"
-                  >
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                      {{ innerColumn }}
+                  <ng-container matColumnDef="materialName">
+                    <th *matHeaderCellDef mat-sort-header>
+                      Name
                     </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element[innerColumn] }}
+                    <td class="text-left" mat-cell *matCellDef="let element">
+                      {{ element.materialName }}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="estimatedQty">
+                    <th *matHeaderCellDef mat-sort-header>
+                      Estimated Quantity
+                    </th>
+                    <td class="text-left" mat-cell *matCellDef="let element">
+                      {{ element.estimatedQty }}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="Requested Quantity">
+                    <th *matHeaderCellDef mat-sort-header>
+                      Requested Material
+                    </th>
+                    <td class="text-left" mat-cell *matCellDef="let element">
+                      {{ element.requestedQuantity }}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="issueToProject">
+                    <th *matHeaderCellDef mat-sort-header>
+                      Issued To Project
+                    </th>
+                    <td class="text-left" mat-cell *matCellDef="let element">
+                      {{ element.issueToProject }}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="availableStock">
+                    <th *matHeaderCellDef mat-sort-header>
+                      Available In Stock
+                    </th>
+                    <td class="text-left" mat-cell *matCellDef="let element">
+                      {{ element.availableStock }}
                     </td>
                   </ng-container>
                   <tr
@@ -101,15 +158,13 @@
         <tr
           mat-row
           *matRowDef="let element; columns: columnsToDisplay"
-          [class.example-element-row]="element.materials?.data.length"
-          [class.example-expanded-row]="expandedElement === element"
           (click)="toggleRow(element)"
         ></tr>
-        <tr
+        <!-- <tr
           mat-row
           *matRowDef="let row; columns: ['expandedDetail']"
           class="example-detail-row"
-        ></tr>
+        ></tr> -->
       </table>
     </div>
   </div>
