--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -60,7 +60,7 @@
           <th mat-header-cell *matHeaderCellDef>Required Date</th>
           <td mat-cell *matCellDef="let element">
             <mat-form-field class="border-input">
-              <input
+             <input
                 matInput
                 [matDatepicker]="startDate"
                 [(ngModel)]="element.dueDate"
@@ -73,7 +73,7 @@
               <mat-datepicker
                 #startDate
                 startView="month"
-                [startAt]="dueDate"
+                [startAt]="startDate"
               ></mat-datepicker>
             </mat-form-field>
           </td>
