Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -125,7 +125,7 @@
            <!-- city -->
         <mat-form-field class="border-select">
           <mat-label>City</mat-label>
-          <mat-select formControlName="city">
+          <mat-select formControlName=city>
             <mat-option *ngFor="let city of cities" [value]="city.value">
               {{city.viewValue}}
             </mat-option>
