--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -2,14 +2,17 @@
 <div class="page-start-point">
   <div *ngIf="!allProjects.length" class="parent min-height">
     <button
-        mat-raised-button
-        class="main-background-color main-button color-white center-element"
-        (click)="addProject()"
-      >
-       Add New Project
-      </button>
+      mat-raised-button
+      class="main-background-color main-button color-white center-element"
+      (click)="addProject()"
+    >
+      Add New Project
+    </button>
   </div>
-  <div *ngIf="allProjects.length>0" class="p-l-20 p-r-20 p-b-20 min-height parent">
+  <div
+    *ngIf="allProjects.length > 0"
+    class="p-l-20 p-r-20 p-b-20 min-height parent"
+  >
     <!-- fix part -->
     <div class="row p-t-15 p-b-10">
       <div class="col-xs-6">
@@ -36,7 +39,11 @@
       </div>
     </div>
     <!-- end fix part -->
-    <div *ngFor="let projDetails of allProjects | SearchPipe:searchText: 'projectName'">
+    <div
+      *ngFor="
+        let projDetails of allProjects | SearchPipe: searchText:'projectName'
+      "
+    >
       <card-layout
         (onEdit)="editProject($event)"
         (onDelete)="deleteProject($event)"
