--- a/src/app/features/bom/bom-preview/bom-preview.component.html
+++ b/src/app/features/bom/bom-preview/bom-preview.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-xs-6">
           <span class="pull-right">
-            element Estimated Quantity
+            Estimated Quantity
           </span>
         </div>
       </mat-expansion-panel-header>
