--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div *ngFor="let data of categoryData">
-        <app-bom-preview [selectedCategory]="data"></app-bom-preview>
+        <app-bom-preview #preview [selectedCategory]="data"></app-bom-preview>
       </div>
     </div>
   </div>
