--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -13,8 +13,9 @@
     <div class="row p-t-10 p-b-10">
       <div class="col-sm-12">
         <button
-          (click)="showIndent(subcategory)"
+          (click)="showIndent()"
           mat-raised-button
+          [disabled]="!materialForms.valid"
           class="main-background-color main-button color-white pull-right"
         >
           Raise Indent
@@ -22,8 +23,9 @@
       </div>
     </div>
     <!-- first table structure -->
-    <div class="row" *ngIf="subcategory">
-      <!-- <div class="col-sm-12"> -->
+    <form [formGroup]="materialForms">
+    <div formArrayName="forms" class="row" *ngIf="subcategory">
+              <!-- <div class="col-sm-12"> -->
       <!-- table structure -->
       <table
         mat-table
@@ -35,8 +37,8 @@
 
         <!-- Position Column -->
         <ng-container matColumnDef="Material Name">
-          <th mat-header-cell *matHeaderCellDef>Material Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
+        <th mat-header-cell *matHeaderCellDef>Material Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
         </ng-container>
 
         <!-- Name Column -->
@@ -48,22 +50,26 @@
         <!-- Weight Column -->
         <ng-container matColumnDef="Required Quantity">
           <th mat-header-cell *matHeaderCellDef>Required Quantity</th>
-          <td mat-cell *matCellDef="let element">
-            <mat-form-field class="border-input table-input">
-              <input matInput type="number" placeholder="Required Quantity" [(ngModel)]="element.quantity" />
-            </mat-form-field> {{element.materialUnit}}
+          <td mat-cell *matCellDef="let element; let i = index">
+
+            
+            
+              <mat-form-field [formGroupName]="i" class="border-input table-input">
+                <input matInput formControlName="quantity" type="number" placeholder="Required Quantity" />
+              </mat-form-field> {{element.materialUnit}}
           </td>
         </ng-container>
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="Required Date">
           <th mat-header-cell *matHeaderCellDef>Required Date</th>
-          <td mat-cell *matCellDef="let element">
-            <mat-form-field class="border-input">
+          <td mat-cell *matCellDef="let element; let i = index">
+            <mat-form-field  [formGroupName]="i" class="border-input">
              <input
                 matInput
+                formControlName="dueDate"
                 [matDatepicker]="startDate"
-                [(ngModel)]="element.dueDate"
+               
                 placeholder="Required Date"
               />
               <mat-datepicker-toggle
@@ -85,7 +91,9 @@
 
       <!-- end structure -->
       <!-- </div> -->
+      
     </div>
+  </form>
     <!-- end of first structure -->
   </div>
 </div>
