Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -10,7 +10,7 @@
           <img
             class="radius-10"
             style="height: 100%;"
-            src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+            src="../../../../assets/images/2020-01-08.jpg"
             alt="Photo of a Shiba Inu"
           />
         </div>
