--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -26,6 +26,15 @@
             View Indent
           </button>
         </span>
+        <span class="p-r-5 pull-right">
+          <button
+            mat-raised-button
+            class="main-background-color main-button color-white pull-right "
+            (click)="addMaterial()"
+          >
+            Add Material
+          </button>
+        </span>
       </div>
     </div>
 
