Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -48,7 +48,7 @@
       >
         <ng-container matColumnDef="materialName">
           <th *matHeaderCellDef mat-sort-header>
-            Name
+            Material Name
           </th>
           <td class="text-left" mat-cell *matCellDef="let element">
             <!-- <input type="checkbox" /> -->
