--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -44,7 +44,7 @@
                     <span>{{ projectDetails.endDate | date }}</span>
                   </div>
                   <div class="font-size12 gray-color text-left width50Percent">
-                    <span>₹ Construction Cost: {{ projectDetails.cost }}</span>
+                    <span>₹ Construction Cost: {{ projectDetails.cost }} Cr</span>
                   </div>
                 </div>
               </div>
