--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -191,7 +191,7 @@
           <input
             matInput
             type="number"
-            placeholder="Construction Cost"
+            placeholder="Construction Cost (Cr)"
             formControlName="cost"
           />
           <mat-error>Construction Cost is Required</mat-error>
