--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -49,6 +49,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
   <div class="col-sm-12 blue-background-color">
+    <a href="/">
     <button
       [class.active]="buttonName == 'projectStore'"
       class="color-white"
@@ -57,6 +58,7 @@
     >
       Project Store
     </button>
+    </a>
     <!-- <mat-menu #aboveMenu="matMenu" yPosition="above">[matMenuTriggerFor]="aboveMenu"
       <button mat-menu-item>Item 1</button>
       <button mat-menu-item>Item 2</button>
