--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -14,50 +14,61 @@
           </div>
         </div>
         <div class="row display-flex m-b-20">
-          <div class="m-b-10 m-r-10" *ngFor="let category of selectedCategory">
+          <div class="m-b-10 m-r-10" *ngFor="let category of selectedCats">
             <mat-card class="p-10"
               >{{ category.materialGroup }}
               <button mat-button matSuffix mat-icon-button>
-                <mat-icon class="font-size18">clear</mat-icon>
+                <mat-icon
+                  class="font-size18"
+                  (click)="clearSelectedCategory(category)"
+                  >clear</mat-icon
+                >
               </button>
             </mat-card>
           </div>
-        </div>  
-      <div class="col-sm-12">
-        <mat-form-field class="border-select center-element">
-          <mat-select [formControl]="categories" multiple>
-            <div class="display-flex">
-              <input
-                class="p-l-10 p-b-5"
-                matInput
-                type="search"
-                placeholder="Search Category Name"
-                [(ngModel)]="searchText"
-              />
-              <button mat-button matSuffix mat-icon-button>
-                <mat-icon>search</mat-icon>
-              </button>
-            </div>
-            <mat-option
-              *ngFor="let category of fullCategoryList | SearchPipe: searchText"
-              [value]="category"
-              (click)="demo(category.materialGroup)"
-              >{{ category.materialGroup }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-sm-12 text-right m-t-40">
-        <button
-          *ngIf="selectedCategory.length"
-          mat-raised-button
-          class="main-background-color main-button color-white"
-          (click)="finalisedCategory()"
-        >
-          Next
-        </button>
-      </div>
-    </mat-card>
+        </div>
+        <div class="col-sm-12">
+          <mat-form-field class="border-select center-element">
+            <mat-select
+              *ngIf="selectedCats"
+              [formControl]="categories"
+              [(ngModel)]="selectedCats"
+              multiple
+            >
+              <div class="display-flex">
+                <input
+                  class="p-l-10 p-b-5"
+                  matInput
+                  type="search"
+                  placeholder="Search Category Name"
+                  [(ngModel)]="searchText"
+                />
+                <button mat-button matSuffix mat-icon-button>
+                  <mat-icon>search</mat-icon>
+                </button>
+              </div>
+              <mat-option
+                *ngFor="
+                  let category of fullCategoryList | SearchPipe: searchText
+                "
+                [value]="category"
+                (click)="demo(category.materialGroup); category.checked = true"
+                >{{ category.materialGroup }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-12 text-right m-t-40">
+          <button
+            *ngIf="selectedCategory.length"
+            mat-raised-button
+            class="main-background-color main-button color-white"
+            (click)="finalisedCategory()"
+          >
+            Next
+          </button>
+        </div>
+      </mat-card>
     </div>
     <div *ngIf="showTable">
       <div class="row p-t-10 p-b-10">
