--- a/src/app/features/bom/bom-preview/bom-preview.component.html
+++ b/src/app/features/bom/bom-preview/bom-preview.component.html
@@ -1,6 +1,6 @@
 <mat-accordion>
   <div #myele>
-    <mat-expansion-panel class="m-b-5 m-t-5" [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
+    <mat-expansion-panel class="m-b-5 m-t-5">
       <mat-expansion-panel-header class="background-color-grey row ">
         <div class="col-xs-6">
           <mat-panel-title class="pull-left">
