Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -211,3 +211,7 @@ a:hover {
   padding-top: 15px !important;
   padding-bottom: 0px !important;
 }
+
+.input-search-padding-zero.mat-form-field-appearance-legacy .mat-form-field-wrapper{
+  padding-top: 0px !important;
+}
