--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -49,7 +49,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
   <div class="col-sm-12 blue-background-color">
-    <a href="/">
+    <a href="javascript:void(0)" (click)="setButtonName('projectStore')">
     <button
       [class.active]="buttonName == 'projectStore'"
       class="color-white"
@@ -63,14 +63,33 @@
       <button mat-menu-item>Item 1</button>
       <button mat-menu-item>Item 2</button>
     </mat-menu> -->
+    <a href="javascript:void(0)" (click)="setButtonName('globalStore')">
+      <button
+        [class.active]="buttonName == 'globalStore'"
+        class="color-white"
+        mat-button
+        (click)="setButtonName('globalStore')"
+      >
+        Global Store
+      </button>
+    </a>
 
     <button
-      [class.active]="buttonName == 'globalStore'"
+      [class.active]="buttonName == 'requestForQuotation'"
       class="color-white"
       mat-button
-      (click)="setButtonName('globalStore')"
+      (click)="setButtonName('requestForQuotation')"
     >
-      Global Store
+      Request for Quotation
+    </button>
+
+    <button
+      [class.active]="buttonName == 'purchaseOrder'"
+      class="color-white"
+      mat-button
+      (click)="setButtonName('purchaseOrder')"
+    >
+      Purchase Order
     </button>
     <!-- <mat-menu #belowMenu="matMenu" yPosition="below">[matMenuTriggerFor]="belowMenu"
       <button mat-menu-item>Item 1</button>
@@ -84,6 +103,15 @@
       (click)="setButtonName('users')"
     >
       Users
+    </button>
+
+    <button
+      [class.active]="buttonName == 'supplier'"
+      class="color-white"
+      mat-button
+      (click)="setButtonName('supplier')"
+    >
+      Supplier
     </button>
     <!-- <mat-menu #beforeMenu="matMenu" xPosition="before"> [matMenuTriggerFor]="beforeMenu"
       <button mat-menu-item>Item 1</button>
