--- a/src/app/features/rfq/project-materials/project-materials.component.html
+++ b/src/app/features/rfq/project-materials/project-materials.component.html
@@ -106,12 +106,62 @@
         </mat-form-field>
       </div>
     </div>
+    <!-- table structure -->
+    <mat-accordion>
+     <ng-template ngFor let-material [ngForOf]="rfqDetails" let-i="index">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Personal data
+          </mat-panel-title>
+          <mat-panel-description>
+            Type your name and age
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <!-- table part -->
+        <table
+        mat-table
+        [dataSource]="material.projectMaterialList"
+        class="mat-elevation-z8 col-sm-12"
+      >
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="Material Name">
+        <th mat-header-cell *matHeaderCellDef>Material Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="Required Date">
+          <th mat-header-cell *matHeaderCellDef>Required Date</th>
+          <td mat-cell *matCellDef="let element; let i = index">
+            {{ element.dueDate }}
+          </td>
+        </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="Requested Quantity">
+          <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
+        <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
+        </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="Estimated Quantity">
+          <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
+        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+        <!-- end table part -->
+      </mat-expansion-panel>
+     </ng-template>
+    </mat-accordion>
+    <!-- end table structure -->
     <!-- end fix part -->
-    <div
-      *ngFor="
-        let projDetails of allProjects | SearchPipe: searchText:'projectName'
-      "
-    >
-    </div>
   </div>
 </div>
