Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/features/rfq/project-materials/project-materials.component.html
+++ b/src/app/features/rfq/project-materials/project-materials.component.html
@@ -112,10 +112,10 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            Personal data
+            {{material.projectName}}
           </mat-panel-title>
           <mat-panel-description>
-            Type your name and age
+            Type your name and age gfhh 
           </mat-panel-description>
         </mat-expansion-panel-header>
         <!-- table part -->
