--- a/src/app/features/rfq/project-materials/project-materials.component.html
+++ b/src/app/features/rfq/project-materials/project-materials.component.html
@@ -4,7 +4,10 @@
     <!-- fix part -->
     <div class="row p-t-15 p-b-10">
       <div class="col-xs-2">
-        <a href="javascript:void(0)" (click)="setButtonName('projectMaterials')">
+        <a
+          href="javascript:void(0)"
+          (click)="setButtonName('projectMaterials')"
+        >
           <button
             [class.active]="buttonName == 'projectMaterials'"
             class="color-black"
@@ -71,10 +74,12 @@
     </div>
     <div class="row p-b-10">
       <div class="col-sm-12">
-        <button [disabled]="!projects.value.length"
-          mat-raised-button (click)="setSelectedProjectList()"
+        <button
+          [disabled]="!projects.value.length"
+          mat-raised-button
+          (click)="setSelectedProjectList()"
           class="main-background-color main-button color-white pull-right m-t-15"
-        > 
+        >
           Add
         </button>
         <mat-form-field class="border-select pull-right m-r-25">
@@ -97,7 +102,8 @@
             </div>
             <mat-option
               *ngFor="
-                let project of allProjects | SearchPipe: searchText:'projectName'
+                let project of allProjects
+                  | SearchPipe: searchText:'projectName'
               "
               [value]="project"
               >{{ project.projectName }}
@@ -108,58 +114,63 @@
     </div>
     <!-- table structure -->
     <mat-accordion>
-     <ng-template ngFor let-material [ngForOf]="rfqDetails" let-i="index">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{material.projectName}}
-          </mat-panel-title>
-          <mat-panel-description>
-            Type your name and age gfhh 
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <!-- table part -->
-        <table
-        mat-table
-        [dataSource]="material.projectMaterialList"
-        class="mat-elevation-z8 col-sm-12"
-      >
-        <!--- Note that these columns can be defined in any order.
+      <ng-template ngFor let-material [ngForOf]="rfqDetails" let-i="index">
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{ material.projectName }}
+            </mat-panel-title>
+            <mat-panel-description>
+              Type your name and age gfhh
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <!-- table part -->
+          <table
+            mat-table
+            [dataSource]="material.projectMaterialList"
+            class="mat-elevation-z8 col-sm-12"
+          >
+            <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="Material Name">
-        <th mat-header-cell *matHeaderCellDef>Material Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
-        </ng-container>
+            <!-- Position Column -->
+            <ng-container matColumnDef="Material Name">
+              <th mat-header-cell *matHeaderCellDef>Material Name</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.materialName }}
+              </td>
+            </ng-container>
 
+            <ng-container matColumnDef="Required Date">
+              <th mat-header-cell *matHeaderCellDef>Required Date</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                {{ element.dueDate }}
+              </td>
+            </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Requested Quantity">
+              <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.requestedQty }}
+              </td>
+            </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Estimated Quantity">
+              <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.estimatedQty }}
+              </td>
+            </ng-container>
 
-        <ng-container matColumnDef="Required Date">
-          <th mat-header-cell *matHeaderCellDef>Required Date</th>
-          <td mat-cell *matCellDef="let element; let i = index">
-            {{ element.dueDate }}
-          </td>
-        </ng-container>
-        <!-- Name Column -->
-        <ng-container matColumnDef="Requested Quantity">
-          <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
-        <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
-        </ng-container>
-        <!-- Name Column -->
-        <ng-container matColumnDef="Estimated Quantity">
-          <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
-        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
-        </ng-container>
+            <!-- Symbol Column -->
 
-        <!-- Symbol Column -->
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
 
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-        <!-- end table part -->
-      </mat-expansion-panel>
-     </ng-template>
+          <!-- end table part -->
+        </mat-expansion-panel>
+      </ng-template>
     </mat-accordion>
     <!-- end table structure -->
     <!-- end fix part -->
