--- a/src/app/features/rfq/suppliers/suppliers.component.html
+++ b/src/app/features/rfq/suppliers/suppliers.component.html
@@ -67,6 +67,7 @@
         <button
           mat-raised-button
           class="main-background-color main-button color-white"
+          (click)="openDialog()"
         >
           + Add New Supplier
         </button>
@@ -81,7 +82,9 @@
       <!-- Supplier Name Column -->
       <ng-container matColumnDef="Supplier Name">
         <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.supplierName }}</td>
+        <td mat-cell *matCellDef="let element">
+          <mat-checkbox></mat-checkbox> {{ element.supplierName }}
+        </td>
       </ng-container>
 
       <!-- Email Column -->
@@ -104,10 +107,12 @@
 
       <!-- Delete icon Column -->
       <ng-container matColumnDef="customColumn">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          <mat-icon>delete</mat-icon>
-        </mat-cell>
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-button class="display-flex pull-right">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
