--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div class="row display-flex m-b-20">
-          <div class="m-b-10 m-r-10" *ngFor="let category of selectedCats">
+          <div class="m-b-10 m-r-10" *ngFor="let category of selectedCategory">
             <mat-card class="p-10"
               >{{ category.materialGroup }}
               <button mat-button matSuffix mat-icon-button>
@@ -31,7 +31,7 @@
           <mat-form-field class="border-select center-element">
             <mat-select
               [formControl]="categories"
-              [(ngModel)]="selectedCats"
+              [(ngModel)]="selectedCategory"
               multiple
               floatlLabel="never"
             >
