review page created.

--- a/src/app/features/rfq/documents/documents.component.html
+++ b/src/app/features/rfq/documents/documents.component.html
@@ -163,7 +163,7 @@
 
       <!-- second column: Upload Document -->
       <div class="col-md-6 col-xs-12">
-        <div class="row pmm">
+        <div class="row p-t-125 p-r-345 p-l-35">
           <div class="col-xs-12 p-l-190">
             <label for="upload-document">
               Upload Document
