--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -3,6 +3,16 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row m-b-10 p-l-80 p-r-80">
       <div class="col-md-12">
+        <div class="row ">
+          <div class="col-xs-12 p-t-10">
+            <button
+              mat-raised-button
+              class="main-background-color main-button color-white pull-right"
+            >
+              Flot RFQ
+            </button>
+          </div>
+        </div>
         <!-- first row -->
         <div class="row m-b-10">
           <div class="col-md-3">
